--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 aniso8601==9.0.1
 attrs==23.1.0
+blinker==1.6.2
 certifi==2023.7.22
 charset-normalizer==3.2.0
 click==8.1.7
 clickclick==20.10.2
-colorama==0.4.6
 connexion==2.14.2
 flagger==3.1.0
 flasgger==0.9.7.1
@@ -16,13 +16,12 @@ Flask-RESTful==0.3.10
 flask-restplus==0.13.0
 Flask-SQLAlchemy==3.1.1
 flask-swagger-ui==4.11.1
-greenlet==2.0.2
 gunicorn
 idna==3.4
 inflection==0.5.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
-jsonschema==4.19.1
+jsonschema==4.19.0
 jsonschema-specifications==2023.7.1
 MarkupSafe==2.1.3
 marshmallow==3.20.1
@@ -38,10 +37,9 @@ rpds-py==0.10.3
 six==1.16.0
 SQLAlchemy==2.0.21
 swagger-ui-bundle==0.0.9
+template-render==0.1.0
 typing_extensions==4.8.0
-urllib3==2.0.5
+urllib3==2.0.4
 Werkzeug==2.2.3
-gunicorn
 psycopg2
 mysql-connector-python
-Flask-Testing==0.8.1
