--- a/swagger_docs/get_data_credit.yaml
+++ b/swagger_docs/get_data_credit.yaml
@@ -17,9 +17,9 @@ definitions:
       customer_id:
         type: string
         description: ID Customer
-      limit:
+      limitt:
         type: integer
-        description: Limit kredit
+        description: limitt kredit
       balance:
         type: string
         description: Balance kredit
