--- a/swagger_docs/get_one_credit.yaml
+++ b/swagger_docs/get_one_credit.yaml
@@ -14,9 +14,9 @@ definitions:
       customer_id:
         type: string
         description: Customer ID
-      limit:
+      limitt:
         type: float
-        description: Limit
+        description: limitt
       balance:
         type: float
         description: Balance
